# readhn

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml  server.json
.sisyphus/: boulder.json
.sisyphus/evidence/: task-2-fixtures.txt  task-2-summary.txt  task-3-readme.txt  task-4-install.txt  task-5-pytest.txt  task-5-stampede.txt  task-5-ttl.txt  task-7-practitioner.txt  task-7-quality-tests.txt  task-7-schema.txt  task-8-eigentrust.txt  task-8-persistence.txt  task-9-pytest.txt  task-9-verification.txt
.sisyphus/notepads/hnmcp-v2/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: hnmcp-v2.md
examples/: README.md  claude_desktop_config.json  profile.json
hnmcp/: __init__.py  __main__.py  cache.py  cli.py  embeddings.py  profiles.py  quality.py  server.py  setup.py  trust.py
tests/: conftest.py  test_cache.py  test_embeddings.py  test_integration.py  test_main.py  test_profiles.py  test_quality.py  test_server.py  test_setup.py  test_trust.py
